--- a/flex/flex.css
+++ b/flex/flex.css
@@ -6,6 +6,7 @@
 }
 
 * {
+  border: 1px solid white;
   box-sizing: border-box;
   font-size: 1.2rem;
   font-family: "AppleSDGothicNeoB";
@@ -15,13 +16,27 @@
 
 body {
   display: flex;
-  justify-content: center;
+  justify-content: center; 
   align-items: center;
-  width: 100vw;
+  width: 100vw; /* %를 쓴다는 것은 부모요소를 기준 (vw)*/
   height: 100vh;
   margin: 0;
 }
 
 /* 아래에 container css style을 지정해주세요. */
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 50% ;
+  height: 100% ;
+}
 
 /* 아래에 item css style을 지정해주세요. */
+.item{
+  display: flex;
+  justify-content: center;
+  align-items:  center;
+  background-color:  black;
+  color: orange;
+  flex-grow: 1;
+}
