--- a/grid/grid.css
+++ b/grid/grid.css
@@ -6,6 +6,7 @@
 }
 
 * {
+  border: 1px solid white;
   box-sizing: border-box;
   font-family: "AppleSDGothicNeoB";
   font-size: 1.2rem;
@@ -22,5 +23,41 @@ body {
 }
 
 /* 아래에 container css style을 지정해주세요. */
+.container{
+  display: grid;
+  flex-direction: column;
+  width:  100%;
+  height: 100%;
+  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-columns: 2fr 1fr;
+}
+
+.item{
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  background-color:  black;
+  color: orange;
+}
+
+.item:nth-child(1){
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.item:nth-child(2){
+  grid-column: 1 / 2 ;
+  grid-row: 2  / 3;
+}
+
+.item:nth-child(3){
+  grid-column: 2 / 3 ;
+  grid-row: 2 / 3;
+}
+
+.item:nth-child(4){
+  grid-column: 1 / 3 ;
+  grid-row: 3 / 4 ;
+}
 
 /* 아래에 item css style을 지정해주세요. */
